# VytalLink

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
deploy/: vytallink.service
docs/: apple_silicon_startup.md  architecture.md  environment_decision.md  hardware_integration_report.md  hardware_needed.md  iphone_vitals.md  macos_migration.md  model_candidate_report.md  morning_report.md  overnight_reliability_report.md  pilot_checklist.md  progress.md  rtsp_camera_test.md  system_report.md
scripts/: cleanup_synthetic_events.py  diagnose.sh  iphone_sim.py  mps_race_probe.py  overnight_soak.py  reset_demo_data.sh  run_mps_race.sh  setup.sh  smoke_test.sh  soak_collector.py  soak_monitor.py  start.sh  startup_stress.sh  stop.sh  validate_vitals_fixture.py
src/vytallink/: __init__.py  app.py  diagnostics.py
tests/: _fakes.py  conftest.py
tests/integration/: test_api.py  test_dashboard.py  test_http_camera_server.py  test_incident_snapshot.py  test_vitals_ingest.py  test_yolo_event_pipeline.py
tests/unit/: test_alerts.py  test_camera.py  test_config.py  test_database.py  test_detector.py  test_detector_yolo.py  test_device.py  test_diagnostics.py  test_event_manager.py  test_evidence_smoother.py  test_false_positive_gates.py  test_hardware_adapters.py  test_http_camera.py  test_incident_reconcile.py  test_live_pipeline.py  test_migration.py  test_multi_camera.py  test_patient_state.py  test_posture_gate.py  test_rtsp_grabber.py  test_state_machine.py  test_synthetic_safety.py  test_wearable.py
(+60 files in other folders)
