[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vytallink"
version = "0.1.0"
description = "VytalLink Phase 1 — camera-based fall detection, wearable vitals, event verification, caregiver alerts, and dashboard (Jetson Orin Nano)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "VytalLink" }]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "psutil==7.0.0",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4", "pytest-asyncio==0.25.0"]

[project.scripts]
vytallink = "vytallink.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vytallink = ["dashboard/templates/*.html", "dashboard/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
